# ParaCL

./: CMakeLists.txt  readme.md  test.lang
.github/workflows/: ci.yml
Frontend/include/: ast.hpp  front.hpp  para_cl.hpp  parcer.hpp  parser.hpp
Frontend/src/: lexer.cpp  lexer.l  main.cpp  para_cl.cpp  parser.cpp  parser.hpp  parser.y
